# orbin

./: .gitignore  README.md  distribution.md  pyproject.toml
env_test_app/: README.md  pyproject.toml
env_test_app/app/: __init__.py  main.py
env_test_app/app/controllers/: base_controller.py
env_test_app/app/routes/: __init__.py
env_test_app/config/: __init__.py  settings.py
env_test_app/tests/: test_main.py
examples/: basic_usage.py
fixed_test_app/: README.md  pyproject.toml  requirements.txt
fixed_test_app/app/: __init__.py  main.py
fixed_test_app/config/: __init__.py  settings.py
fixed_test_app/tests/: test_main.py
fully_fixed_app/: README.md  pyproject.toml
fully_fixed_app/app/: __init__.py  main.py
fully_fixed_app/app/models/: __init__.py  post.py
fully_fixed_app/config/: __init__.py  database.py  settings.py
fully_fixed_app/db/migrations/versions/: 20250824121715_create_users.py  20250824121828_create_posts.py
fully_fixed_app/tests/: test_main.py
model_test_app/: README.md  pyproject.toml
model_test_app/app/: __init__.py  main.py
model_test_app/app/models/: post.py  user.py
model_test_app/config/: __init__.py  settings.py
model_test_app/db/migrations/versions/: 20250824115801_create_users.py  20250824115904_create_posts.py
model_test_app/tests/: test_main.py
orbin/: __init__.py  cli.py  database.py
orbin/generators/: __init__.py  app_generator.py  base_generator.py  controller_generator.py  resource_generator.py  scaffold_generator.py
orbin/templates/app/: .env.j2  .gitignore.j2  requirements.txt.j2
orbin/templates/app/config/: database.py.j2  settings.py.j2
orbin/templates/app/tests/controllers/: .gitkeep
orbin/templates/app/tests/fixtures/: .gitkeep
orbin/templates/controller/: resource_controller.py.j2  resource_controller_broken.py.j2  test_controller.py.j2  test_controller_broken.py.j2
orbin/templates/model/: migration.py.j2  model.py.j2
test_app/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
test_app/app/: __init__.py  main.py
test_app/app/models/: __init__.py  user.py
test_app/config/: __init__.py  settings.py
test_app/db/migrations/versions/: 20250824120512_create_users.py  20250824121025_create_posts.py
test_app/tests/: test_main.py
tests/: __init__.py  test_hello_world.py
